crates/ruff_cli/tests/snapshots/integration_test__stdin_success.snap
---
source: crates/ruff_cli/tests/integration_test.rs
info:
  program: ruff
  args:
    - "-"
    - "--format"
    - text
    - "--isolated"
    - "--no-cache"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----

